Sutter Health/src/objects/PDI_Campaign_History__c.object
<CustomObject>
    <description>Used to manage PDI Campaigns</description>
    <fields>
        <fullName>Campaign_Initiator__c</fullName>
        <description>Used to store the campaign initiator name</description>
        <label>Campaign Initiator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <description>Used to track the status of the campaign intiation</description>
        <label>Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Partially Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_and_Time__c</fullName>
        <description>Used to capture campaign completed/failed date and time</description>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter inactive providers</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resigned_From_Sutter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter resigned providers</description>
        <label>Resigned From Sutter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired_Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter retired providers</description>
        <label>Retired/Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <description>Used to store campaign initiation date and time</description>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>Used to show campaign job status details</description>
        <label>Status Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trading_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter Trading partner providers</description>
        <label>Trading Partner</label>
        <type>Checkbox</type>
    </fields>
    <label>PDI Campaign History</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDI Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>